package com.qmp.guardarropas;

public enum Estado {
  PENDIENTE, APROBADA, RECHAZADA

}
