package com.qmp.otros_servicios;

public interface Notificador {

  void notificar(String texto);
  
}
