package com.qmp.prenda;

public class Color {
  private final int rojo;
  private final int verde;
  private final int azul;
  public Color(int rojo, int verde, int azul) {
    this.rojo = rojo;
    this.verde = verde;
    this.azul = azul;
  }
  public int getRojo() {
    return rojo;
  }
  public int getVerde() {
    return verde;
  }
  public int getAzul() {
    return azul;
  }
}
