package com.qmp.prenda;

public enum Material {
  ALGODON, JEAN, CUERO, PIQUE, ACETATO;
}
