package com.qmp.prenda;

public enum Trama {
  LISA, RAYADA, LUNARES, CUADROS, ESTAMPADO;
}
